# solo6-152

./: pyproject.toml
smart_run/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  hooks.py  notifier.py  patterns.py  runner.py
